--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -162,6 +162,7 @@ LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
+MOLB2DAT = @MOLB2DAT@
 MPIRUN = @MPIRUN@
 NM = @NM@
 NMEDIT = @NMEDIT@
