--- a/lib/tests/Makefile.in
+++ b/lib/tests/Makefile.in
@@ -161,6 +161,7 @@ LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
+MOLB2DAT = @MOLB2DAT@
 MPIRUN = @MPIRUN@
 NM = @NM@
 NMEDIT = @NMEDIT@
