--- a/lib/tests/Makefile.in
+++ b/lib/tests/Makefile.in
@@ -111,6 +111,7 @@ AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BCPT_AVERAGE = @BCPT_AVERAGE@
+BCPT_AVERAGEXP = @BCPT_AVERAGEXP@
 BCPT_FIT = @BCPT_FIT@
 BCPT_MAINTAINER = @BCPT_MAINTAINER@
 BCPT_MOLSYS = @BCPT_MOLSYS@
